# ChangeLog for dev-libs/libusb-compat
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusb-compat/ChangeLog,v 1.41 2013/10/24 15:24:05 jer Exp $

  24 Oct 2013; Jeroen Roovers <jer@gentoo.org> libusb-compat-0.1.5-r2.ebuild:
  Stable for HPPA (bug #488708).

  13 Oct 2013; Michał Górny <mgorny@gentoo.org> libusb-compat-0.1.5-r2.ebuild:
  Explicitly call einstalldocs in multilib_src_install_all() to accomodate bug
  #483304.

  08 Aug 2013; Samuli Suominen <ssuominen@gentoo.org>
  libusb-compat-0.1.5-r2.ebuild:
  Block revision of emul-linux-x86-baselibs that dropped the colliding files.

  07 Aug 2013; Samuli Suominen <ssuominen@gentoo.org>
  libusb-compat-0.1.5-r2.ebuild:
  Insert missing MULTILIB_USEDEP to the virtual/libusb:1 dependency.

*libusb-compat-0.1.5-r2 (07 Aug 2013)

  07 Aug 2013; Samuli Suominen <ssuominen@gentoo.org>
  +libusb-compat-0.1.5-r2.ebuild:
  Conversion to multilib-minimal.eclass.

*libusb-compat-0.1.5-r1 (01 Aug 2013)

  01 Aug 2013; Samuli Suominen <ssuominen@gentoo.org>
  +libusb-compat-0.1.5-r1.ebuild:
  Move the shared library to / for hid2hci binary from net-wireless/bluez wrt
  #478878 by Alexis Ballier

  02 Jul 2013; Agostino Sarubbo <ago@gentoo.org> libusb-compat-0.1.5.ebuild:
  Stable for sh, wrt bug #474168

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libusb-compat-0.1.5.ebuild:
  Stable for s390, wrt bug #474168

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libusb-compat-0.1.5.ebuild:
  Stable for sparc, wrt bug #474168

  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libusb-compat-0.1.5.ebuild:
  Stable for arm, wrt bug #474168

  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libusb-compat-0.1.5.ebuild:
  Stable for ia64, wrt bug #474168

  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libusb-compat-0.1.5.ebuild:
  Stable for alpha, wrt bug #474168

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libusb-compat-0.1.5.ebuild: