@@ -6,14 +6,24 @@ DIST libusb-compat-0.1.4.tar.bz2 242379 SHA256 ed5bdd160c7b01ef767fb931a81b454f4
 DIST libusb-compat-0.1.5.tar.bz2 276769 SHA256 404ef4b6b324be79ac1bfb3d839eac860fbc929e6acb1ef88793a6ea328bc55a SHA512 fe63bd1c65e67588a83ebfdd329025ecf75f33f877fb80dd83eb528df057efb591e010416027f9054294504562299166e8e2811a7681fa1967a03baae9b88857 WHIRLPOOL 2f84934c28980bee9e8ca69d284303cdbaf4cb72cee02108825bd7366bfff7f6365db5ffee8de024eb85dee571eccc47acea6a25d6835f0fefb0ad8a77d05045
 EBUILD libusb-compat-0.1.4.ebuild 1032 SHA256 283e508f7e1181773583484014570971982a39bfc96f2c409be38e9d2262c95d SHA512 99d5253c2b63b16b2a3b8b9873c5e678aab60038fc40c266c809c0a419f9a3dfbab34bb859acdeb00624280e962b6f7005147a68bd3e665adb9aac13530af63f WHIRLPOOL a092775978bafe5d52738a715b8066345f664d9514175d5577e2ac126010a8b7a25e566e86e0f06731f8bf8859c1aad93481d31e96f9cb40abd28e63732eac91
 EBUILD libusb-compat-0.1.5-r1.ebuild 1090 SHA256 7699d33e40484e4ee3fa129ccd0f32d0c9bd5b582e18e1a7a50c3bedb4b0c1e8 SHA512 ecae18dad80cc53de2256444372a3ea05591091d8b65e1e572714fd837ca9884f070a33782b8506e84ddabb24b0c832a21f92bbda647bb7a9bcdb819ae1d9e28 WHIRLPOOL 407d2a444d5cde0083e802d97b67219ee5366e1ca95175503a2111dade3e696bdd2433ec19be50e14e31c9ff331bcdabab4d24999d435396259b61fca33fa7eb
-EBUILD libusb-compat-0.1.5-r2.ebuild 1419 SHA256 6839b92c580b80daff8b39a806bd1063666fc75f9b974020f6f626850dc29fbd SHA512 4765a4202050a88a73a428bec3c82879bfa771c80e80a47376614c27daedd2d6dc5aa85f1d26f66c1b5435bcefadfa944b4759ebebe66e5ae8696b81873b5ff5 WHIRLPOOL 3e03dce313a94e04243e9f379207bb96e8a513dd41c920226c2417c7f278d087e7553f928fbdce65f65d3ee5b4ffb4cc9ad4b880a684a41f94eec35a8fbebb65
+EBUILD libusb-compat-0.1.5-r2.ebuild 1423 SHA256 863dafb4fe8cdff1a22e6153c51daae66bc7170d0b048a952cfd60caeafcd61b SHA512 7412c6ee3d92821013597e7f40c6ee0ce4814469224ac8a94e7745afdb691fbe5ab0922393dec32712fb03e3c1c1dde6784dfdfb53e22cf283c254d4851701a1 WHIRLPOOL dd247b15a6fed3c77bcb40bb1e0fca67f57b91d2de089df67eac46408b2a44f53f7002ddeb9c5809355ea5308d2ec92c363756574e9da366fe61f8a66cf33803
 EBUILD libusb-compat-0.1.5.ebuild 1029 SHA256 fb1cca5cf7db139581bfd277987e3e3c9001c0472ac41551c1834a7d17492be2 SHA512 39e685e683063c9298a986bc16ecf0c5f21013610908631f9ee89784fae139f44dcd5164125d441cc6fdf39dcd20581df7a380bf289a51140210060d20affd93 WHIRLPOOL 782d9a49f746ab5d295562a10ffd9b6aedabdcda7f3db4600dce0eb4403675666d7f3361b50b276781bb3dfe4e07323e5484b1c4a063a3c38442057730d4d5e3
-MISC ChangeLog 6091 SHA256 02f6bcf2ea3b54986241e79b8e8a3ea487253a7af8042e173d874eca80c11cb9 SHA512 f477c7563e8be7ca15fa3449d53b592d6a584371bb4c54889846bbbfded915c2c1fe5f678dadcc56f28a01ef4d0ed4ca3d38e6cdf8ee01f19f6f6ffcbc922e18 WHIRLPOOL a28fcd31034b26e37b7310cf8d20f1a2afca52c2205903c2819732e44e17b48becd1bf1aa2f9690307c1982cc6ae723076376b3836303089c59b11987ce7b6d2
+MISC ChangeLog 6205 SHA256 64f61d7d300b10614e4e22f6079b240a8753cdbab0f34d02c98bd7ebaee7a558 SHA512 28ca1b5f10c5631f36c395e16cf41f73721bbfc840c27d5de623571e2f780b6978c9ab6686cd53dd083169b3792b59009427739677915990e7e06bd1b873d795 WHIRLPOOL ddcb457fe05a35f58ea3d9ae5813f900079a5bd713564c7119fe3adb1dc7e268fa6956bc734aae5fba532a305860b3c9d1fd1c4c03f6a8654f1c7e43d108bb58
 MISC metadata.xml 285 SHA256 8f3e4e1f792ef6a6f383ae0aac1627db7f536ff880da423bca1113cea6d06773 SHA512 10fc61b3654c9aee6e9ba9702cf6630928921d2670248b9e1356d417b205dabc959e3672eda071f5fa734b3a001992cecd514a920b6e37376db943266683e75d WHIRLPOOL e26de64dba56ea85587b9e7348a1be056f78a2e2f9f91ffb5faef242b7ced82496b40fe672b18c33491f40a124161ca47af0e80219ebe39a8b24e86557c36db1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlJpO5YACgkQVWmRsqeSphMCUgCcCimvg8QRRlGVqC4Tafrx5vtO
-MMUAn1UqM5ctfKU6fAu9LxxlPAIDe4eN
-=K2w8
+iQIcBAEBCAAGBQJSgxepAAoJEA/daC2XTKcq6DkP/RIUsMex6i8yx5UlL9Gdl2Bq
+I2DlK05G2PmbrLmoor+20sczT1d/KGOvv32tIYshIbt1IUwGJNcOmTC7HxK8LC+C
+PtuHhAWtxrOjHkNXi7O7Cbg8FKTGJotY8XgysSeNPIMSaNQFt58TEJmps4DrEbKw
+YNiwC9IM1ffzwjHqwQaSWf9SqQ9upL11NsOJkp3DOE4RTz/MQEI8HDRgHgsiGTEZ
+yOXIuFZGj1o+blgIrs2WfNxNpGvvTXEKYbnoZYcyw7p7s32GvHkzq+/ctoyl4HFk
+SrAD60kvEluuwr0bb0PWh1SmBa79aldXKmcea0T5WIF+rGlkTOMt+VSut/QwWPVv
+9TrgMGOoSXOpIrDr3l7PYI18dfc9Ayc3Weh8d3ExUXnVwySy+Fyak97swsO0aIKv
+pojjYquHbqNkCpVwiMyOK2uGoD5DrYK5q4LHgVTZ2wzCaWAyS8GluIHQh82ysxO1
+MHPaF62zkeAxxDfOOLKqkU6pUck7OtoOWeazewQKqcNAS4FWVf9CrAV6LORy8Cl9
+qnSk3D6zCATXVbMYIiFgf8c0bXpK7Q0pwOAmkq93Ld3k9uZoohBcV3CByEstq4T4
++2HDL9fpZa8ZhfNvRGBKKQL4kZKkgmIZ9pBavJQZG8/JUNRFqGyCxgkXSXYKT7gw
+omaaMkDAhX6o/fw0cSNT
+=D/kO
 -----END PGP SIGNATURE-----
