@@ -2,13 +2,23 @@
 Hash: SHA256
 
 DIST libusbx-1.0.17.tar.bz2 507441 SHA256 876f8d2c3fee73840a89cb78f3e384c0ab73a67f9155a010b1a5a73ece5145b8 SHA512 fddde538197707e6a97a6ddefab0deeba67f93def1694dac8379589d442c707f8319b1bd9fae6587b25ddaa92ce7894f3ec2e65ddfc031697c15e4c65d251d31 WHIRLPOOL 5ec749741c8c911f7efed28e1ce820ad90d649284801b5a91c9d732c7625943f180e599351aa272760772dfc06047e4303d662df858e52cd4828ab010b63f3f7
-EBUILD libusbx-1.0.17.ebuild 1769 SHA256 6e3963cccfcb1669d0e5c66413b984e8423f03627b0db458f0a1daee189302da SHA512 3d6632b0a360522c1b24b7dab5e35594c94370b99d144b0aca6d71d25d690aa282f37f4b8c472f6f6c09abfb16f4ee798d9d725611e6a20cdc2427fb3045afcd WHIRLPOOL 8830247b7de16d8c14df2bba97a330663d5731f468f978c8556da38ea864225de284af3b34eae21c4e0973e25115893715e24dfa95cc7e1586213e0081cdcfb5
-MISC ChangeLog 3498 SHA256 9304eca0e1571c8d9b38e2b39d0746fe9d6ba0796e97252847edcba4e5bf0886 SHA512 9c85e5db9284016bc88096c643cb28c7bce6686cea4dba8a406d755bec1a1cc336a1c5b5d514ec8f5bfed4f1d794e5e216a8ec5e5793aa2b5670f2d6657a24b0 WHIRLPOOL 3dacb05a1cedb3c169648ade6d771ff0bf0cbf493133d205d410231dc720332cdba8bf25e6c231d17379f4eaa7798b856578294e46e3cf52effc0315fd542bd5
+EBUILD libusbx-1.0.17.ebuild 1773 SHA256 869857a623875284a87e0c299225560965b97b47c31489e90acc0220cd0b44fc SHA512 001cfc9f96f653418d805d89c9d7bfa4f9adc867fab7eb137c0f1be085c01bcbf1a4017f968d50ab4b0c1bec0a3148a7e24b47a1aa7751bed52fe0eeebe3a2ce WHIRLPOOL 4100ce5c26eba976a88d90e271ee012a86632dc08d86792ac8638fcb1f715dadc65e84704d2988276700024558b438b8c39a351160ebedf09bcc32dd1b3d20e0
+MISC ChangeLog 3604 SHA256 abd08a165fb80b30fa1655e06beb7402ae87d27e599ebf737d414a54311fd68c SHA512 5870c5154ebdd6a06da1830b4ff61f65e3b9a29fbd2c49dad0e1f9565a9c130d0edba6491f9203d533390746bfdc0def99feb53240276144fa23025008fca5e3 WHIRLPOOL 858084ba9a311f5f64fedb9082c002bc881522570ec3d0f95a1a09d2bfc7247af53b803ad47999e074f7b4dfafad41cf3b405df994665d598889d8e902678f3c
 MISC metadata.xml 285 SHA256 8f3e4e1f792ef6a6f383ae0aac1627db7f536ff880da423bca1113cea6d06773 SHA512 10fc61b3654c9aee6e9ba9702cf6630928921d2670248b9e1356d417b205dabc959e3672eda071f5fa734b3a001992cecd514a920b6e37376db943266683e75d WHIRLPOOL e26de64dba56ea85587b9e7348a1be056f78a2e2f9f91ffb5faef242b7ced82496b40fe672b18c33491f40a124161ca47af0e80219ebe39a8b24e86557c36db1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlJpO20ACgkQVWmRsqeSphPntgCfaH75kEFJRfCnO69r7xDaCCBg
-26oAn2rsmFAgTHYNZhMZ6nmMExE3NAjH
-=ua0C
+iQIcBAEBCAAGBQJSgxeJAAoJEA/daC2XTKcqJ9cP/ir5UQ+4HD4MGffflaTEFzuX
+oTD8jFZWz9ypaaps91GFv7p34VF0klBveoMD5FI8owf0jrXVJjyHLyCcVm+TXHi8
+eD5yn4p6kMIrka3k0xtqQYBo7D293KITolpDsMmhdTgJjhqoPD6y5bJ1hx19aeQV
+493hdzMrplBG72w+AjzTtMrgEoePio/cgRQC/u0DM5PefRs/YSFeI1v44F7Qe4qp
+O+2TfA2JSjXxBJRVmTSNgzyZY2CNMaLQI2aOtF74idgpX26MfmtxnuETDG/N+9kS
+pIv2tZxt7/JZ+eIUbW19bCpwnwXMzpl+6Me+sQIefYDm2aFdYM1QP7Eq+bQUQB2Y
+/IoEbqxA3d48W2HPPh5lGAXZ0cmCJgq0hgo+9YJIUg2hzngu7V5RrbGmFJSU32az
+HoY+7KG2uElsM7VOgDhd8+FFc+YI1JxZi0E0b+Ww4oh8wWxg0o0n6jZ+P2Eev5K4
+YSr0GwaCxSuNncezbL29l6jPtiO7c1bC/Ow0hDW2/k00PbJZDwQIXGt4Nib6MQDX
+/FfEgkca8L6pwQB25iwSwyXoiIaaGChn7g0Gd1nETPnEyCpV1KFgsJqKXVD+vf+U
+W1SbBgfkDaeT1GIRmk9r4CuoAbzWZG6ZhZ2hxf6c/rORZZg/q2fSkccr8PePpai3
+/qyTh8s7E0+LV2SULa7q
+=K1vQ
 -----END PGP SIGNATURE-----
