@@ -1,16 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD libusb-0-r1.ebuild 656 SHA256 03b07649bfe9bcd0196ae3f16521ea9848eb3babeff1c10ccaf778e032672987 SHA512 decc86c59eae271010f6b0d351449131b4091f7f3d8cedf1ffdace1b04b9ab8e549838864c817c3714159e2322e03206a72da9fd5bb4f6cf9bf759c9b43b8ffa WHIRLPOOL b87d87d017f290f50e794ceb4e57499ce0b4bc48fceb6d535d12ef46137540e73b31f9f047661c4d4be6a82511878d9e2b05140fe29dd67ea4e90b2503ae5b52
+EBUILD libusb-0-r1.ebuild 660 SHA256 e02ab9bcdea6debb03ecd796be43e2a2efdb3d0d86ecd24cb4e8b71462091005 SHA512 f6647fa358f69a82da9996b4367209b0b5cc2d8780458caddaddcfda1a953da739ce792a5377d34b264caccc36f2e602036b286746aeb6bec2be590091e6416a WHIRLPOOL 819b160f2441dbadb69af6516699d3a663ebae92967108cc717ed2ccd06b56bf37d66fa84214790094c7a6b933ba8c2e1868d7004764df951675063396c40d4d
 EBUILD libusb-0.ebuild 584 SHA256 989af60aa39deb4c08fd29391f1d64864574794fa02056ac05d15634e4ed694d SHA512 c3cf79fd4940327f22978934d4a88a6408f71c556518dc7bfe41f7a0c9480d4792246fb0154ba10f1a3492976267e9185b5fbf61da0dbd73665bc75d00d46bf1 WHIRLPOOL e191d799e817b46ca7b957f5d2efa7156cdefad2670e72b49539e3366adce0e87af725502d15bdf7b04be4a0bcef28c97e8d8def799ee1e285443d31ae67df0f
-EBUILD libusb-1-r1.ebuild 720 SHA256 966e1db48a59b6d6fd96058ddc0f570d9cd4bc16a63545093cbbe792db0d33f5 SHA512 50e2f2cb61e217f9c8b26345a12750835cc04d5d6fd460824bf1b40ed0b413624ae66103abff3164b21af197a5beea80c12805ecd0393cf37cf14abe7f311709 WHIRLPOOL 4e9cf3ff8e6f1c75795aab573bd3e11171f40971df188b9ffad922786b06e45861d6eadfd8a47d2fcbae10b2145bc0ae259f141aec64f405013d391230e1b156
+EBUILD libusb-1-r1.ebuild 724 SHA256 592c5ca779b7dd7baa14f1ac41d0b46b4c03464dac472ba0b4424da424e9b71d SHA512 b9351af347f685fc2adebdd1a1d0afd874a95eafb0b6fc5552a12c0e7310aec2677da7a074e085e2d530e0b0ee888a3becbc84dfbdf2085d8b9bedda23f350d9 WHIRLPOOL 2d9b6fd8ef49af6f269da96eca8abaa3da79d842a845303fd3035c63ea36a450fc51e15c1e103370ccb2d3a3ce769b5c1d4491f820f31b218dacdd8858f019f1
 EBUILD libusb-1.ebuild 625 SHA256 acd8d791d76504f6c245611a662881e6aa0b636db8b4a2195f8882db2887e570 SHA512 ad6533606f63d5e1b02299b51db0a0ef452fa096556a5b4e307bc0935403a7cd2750d2ed164a4eee49f6e4be74d3efaba3e75722c39b76776bc3143389f8bcfa WHIRLPOOL f37947ab428069e23b46bcdbf37df80684e403673739615d18e8ab44bd02deefe4b0c78fc406452db38e63d25ead90ef1c55a7cd9e9a7355bf086a1e553caabe
-MISC ChangeLog 5228 SHA256 549e2241d299579a88c6f6a25ee0c4ff76939761c0a7e871ac0c207d7677e32b SHA512 eda9a307d24c067d1e0bd7760b78602a5021c4a6b26da02364e995be48fc033a99d4414cdfb043aa784636253a1b27dac7f6a466001df677e305b0e252fd54a6 WHIRLPOOL 873d4dfecaa927cbb49c67cd2dd71d4b82dc52af314fe1f3780f757dcf9c31f382f4a5d93b3c20fd113ba51521bb634ff0e6465321dad48676c708f47c3fdeb1
+MISC ChangeLog 5353 SHA256 065aae2bebb622cae793dcd24a0ad3a46ff7ecda60f5214dc597f4dce09621e6 SHA512 dc9c794a9db1ee4a4b684b6c7f062af04cdbd337ca46cd34284f6860dd6b6a4e4a5188613c33cd76119d87ee3df6d0ea3cd0624f884bdd47f11f9435024e7725 WHIRLPOOL 7cf08b2d8461d36aa401be973ee37668f4672bf8e943f061567e13915e5ecd52357e379e21b1c6f18fb15dc88f60ee91a22ce6ca79055ee55be77b669b830f2d
 MISC metadata.xml 285 SHA256 8f3e4e1f792ef6a6f383ae0aac1627db7f536ff880da423bca1113cea6d06773 SHA512 10fc61b3654c9aee6e9ba9702cf6630928921d2670248b9e1356d417b205dabc959e3672eda071f5fa734b3a001992cecd514a920b6e37376db943266683e75d WHIRLPOOL e26de64dba56ea85587b9e7348a1be056f78a2e2f9f91ffb5faef242b7ced82496b40fe672b18c33491f40a124161ca47af0e80219ebe39a8b24e86557c36db1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlJpO74ACgkQVWmRsqeSphOSMwCdELeQzo0GT62chbKhEfuTvHNw
-x0EAnAqTFVlYozryCKHjSfP5miGNltk/
-=ncZT
+iQIcBAEBCAAGBQJSgxfRAAoJEA/daC2XTKcqrWgQAJ4GCdiSxb/rDK4tCwTuYN3y
+/o1xEIxE2IR5p9XommgWv5tfRsaRCOoT3+e9jY/DLKEN38v1VqYP0C+2NC4kwWeP
+8aE7a8h0W2F/8250I9LFLQ3CL/GxmbK2OnJlCNVf93cRZmPD+tKPLPF7xXJvqV+7
+S0HEZZ0FwYf0aNaipY9K+P03mXdWsQS7zfnGRKfMTVWxrOTIwPR02EWSjDVEWsXw
+KrwFtz9bza5s1tUFP1uxLIuglvJG94LsyGM7xeGYt2qMtPBETWj1ynLwErnZ806f
+3kRt5pybDG2gF0Sxn7rTY06nGT0s3ghg1LCoyDosNOO2+7btizgVjhWET+UafdSH
+yXMmGGLtoBoU8/OWdTVlkt863AfDmxbqstmIa3SbNC5bMtRxAJ5wGNX6aHr+PLCy
+7O/x6q9iiZ1zvd6sctiNV05MHl5eytSXXA3gzKF4PyFYw58IcJQh5OO3vETpjW4d
+1k8tdi3VM88iwyEm5KyVlB73vVipFd1d+OqTm2oSFhkNY0wYKGeKQBpNzQIZZACW
+YUdE0lHteYEmPgcj1ze7qcN+XivVC/m69Ix/LdOBc1ueL2gFKmYxg/26SFjFjAhI
+W32HTJj0zoE7+lEMoaXOHr65AyCU1DJ6oTvw9J7dc6m2PiWAs65ce6Dbf2cQecI6
+BnGoHlkU1Cc/nrAVghph
+=9ME3
 -----END PGP SIGNATURE-----
