@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libusbx
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusbx/ChangeLog,v 1.22 2013/10/24 15:23:23 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusbx/ChangeLog,v 1.23 2013/11/13 06:09:08 mattst88 Exp $
+
+  13 Nov 2013; Matt Turner <mattst88@gentoo.org> libusbx-1.0.17.ebuild:
+  alpha stable, bug 488708.
 
   24 Oct 2013; Jeroen Roovers <jer@gentoo.org> libusbx-1.0.17.ebuild:
   Stable for HPPA (bug #488708).
