@@ -1,6 +1,10 @@
 # ChangeLog for virtual/libusb
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/libusb/ChangeLog,v 1.36 2013/10/24 15:24:45 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/libusb/ChangeLog,v 1.37 2013/11/13 06:10:19 mattst88 Exp $
+
+  13 Nov 2013; Matt Turner <mattst88@gentoo.org> libusb-0-r1.ebuild,
+  libusb-1-r1.ebuild:
+  alpha stable, bug 488708.
 
   24 Oct 2013; Jeroen Roovers <jer@gentoo.org> libusb-0-r1.ebuild,
   libusb-1-r1.ebuild:
