@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libusb-compat
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusb-compat/ChangeLog,v 1.41 2013/10/24 15:24:05 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusb-compat/ChangeLog,v 1.42 2013/11/13 06:09:39 mattst88 Exp $
+
+  13 Nov 2013; Matt Turner <mattst88@gentoo.org> libusb-compat-0.1.5-r2.ebuild:
+  alpha stable, bug 488708.
 
   24 Oct 2013; Jeroen Roovers <jer@gentoo.org> libusb-compat-0.1.5-r2.ebuild:
   Stable for HPPA (bug #488708).
